--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 Delete commented code
 Make it so predict.py gives final test run
+- Make sure this doesn't overwrite given model!
 Ensure test.py works properly and note down value it gives when working correctly
 Delete unncessary files
-Make sure that your cool_viz.mp4 is still working and is in the folder!
+Commit final test run graph!
